// Copyright 2018 The OpenPitrix Authors. All rights reserved.
// Use of this source code is governed by a Apache license
// that can be found in the LICENSE file.

syntax = "proto3";

package metadata.types;

option go_package = "openpitrix.io/metadata/pkg/pb/types;pbtypes";

import "google/protobuf/timestamp.proto";

message ConfdConfig {
	ConfdProcessorConfig processor_config = 1;
	ConfdBackendConfig backend_config = 2;
}

message ConfdEndpoint {
	string frontgate_id = 1;
	string drone_ip = 2;
	int32 drone_port = 3;
}

// Keep same as libconfd.Config
// See https://godoc.org/openpitrix.io/libconfd#Config
message ConfdProcessorConfig {
	string confdir = 1;
	int32 interval = 2;
	bool noop = 3;
	string prefix = 4;
	bool sync_only = 5;
	string log_level = 6;
	bool onetime = 7;
	bool watch = 8;
	bool keep_stage_file = 9;
}

// Keep same as libconfd.BackendConfig
// See https://godoc.org/openpitrix.io/libconfd#BackendConfig
message ConfdBackendConfig {
	string type = 1;
	repeated string host = 2;
	string user = 3;
	string password = 4;
	string client_ca_keys = 5;
	string client_cert = 6;
	string client_key = 7;
}

message ConfdStatus {
	int32 process_id = 1;
	google.protobuf.Timestamp up_time = 2;
	string status = 3;
}

message SetConfdConfigRequest {
	ConfdEndpoint endpoint = 1;
	ConfdConfig config = 2;
}
